<resources>
    <string name="app_name">RabbitTask</string>
    <string name="hotspots_title">Hotspots</string>
    <string name="events">Events</string>
    <string name="home">home</string>
    <string name="search_icon_title">search</string>
    <string name="profile_icon_title">profile</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification">Notification</string>
    <string name="attractions_title">Attractions</string>
    <string name="view_all_title">view all</string>
    <string name="location_text">You are in \n <strong> Misr AL Gadida - Egypt</strong></string>
    <string name="search_text">Search</string>
    <string name="hot_spot_text_title">HotSpots</string>
    <string name="events_text_title">Events</string>
    <string name="attractions_text_title">Attractions</string>
    <string name="search_fragment_title">Search Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="notification_fragment">Notification Fragment</string>
</resources>
