<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/home_selector"
        android:title="@string/home"/>

    <item
        android:id="@+id/search"
        android:title="@string/search_icon_title"
        android:icon="@drawable/search_selector"
        />


    <item
        android:id="@+id/empty"
        android:title=""
        android:enabled="false"
        app:showAsAction="never"/>

    <item
        android:title="@string/notification"
        android:id="@+id/notification"
        android:icon="@drawable/notification_selector"
        />
    <item
        android:title="@string/profile_icon_title"
        android:id="@+id/profile"
        android:icon="@drawable/profile_selector"
        />


</menu>